# gtk_example

chose_file/01.original/: testfilechooserbutton.glade  testfilechooserbutton2.c  testfilechooserbutton3.c
chose_file/02.replace/glade/: window.glade
chose_file/02.replace/include/: headers.h
chose_file/02.replace/src/: CMakeLists.txt  window.c  window.h
chose_file/03.add_strings/: CMakeLists.txt
chose_file/03.add_strings/src/: window.c
chose_file/04.structure/: CMakeCache.txt  Makefile  cmake_install.cmake
chose_file/04.structure/glade/: window.glade
chose_file/04.structure/src/: Makefile  chosefile  cmake_install.cmake  window.c
chose_file/05.common_var/src/: .directory  defines.h  main.c  window.h
chose_file/05.split1/include/: window.h
chose_file/05.split1/src/: Makefile  chosefile  cmake_install.cmake  functions.c  window.c
chose_file/06.split2/: CMakeCache.txt  Makefile  cmake_install.cmake
chose_file/06.split2/glade/: .directory  Rscript_editor.org.glade  window.glade
chose_file/06.split2/include/: Rscript_editor_structures.h
chose_file/06.split2/src/: CMakeLists.txt  Makefile  chosefile  cmake_install.cmake  defines.h  editor.c  functions.c  window.c
console/: Makefile  console.c  console.h  main.c
dialog/01.glade+cmd/: Makefile
dialog/01.glade+cmd/src/: CMakeLists.txt  defines.h
entry/01.original/: hello.c
openmp/C/: advisor.sh  compile.txt  openmp  openmp.c  openmp.org.c  set_advisor.sh
openmp/C/Example_Advisor/: Example_Advisor.advixeproj  annotations.advidb
openmp/C/Example_Advisor/e000/: e000.advixeexp
openmp/C/Example_Advisor/e000/hs003/: hs003.advixe  summary.advisum
openmp/C/Example_Advisor/e000/hs003/config/: analysis_type.cfg  collection.cfg  context_values.cfg  runss.options
openmp/C/Example_Advisor/e000/hs003/data.0/: 14660-14665.0-14665.0.th  14660-14665.0.trace
openmp/C/Example_Advisor/e000/hs003/sqlite-db/: dicer.db
openmp/C/Example_Advisor/e000/source_cache/: temporary_files.index
openmp/C/Example_Advisor/e000/st003/: annotations.advias  st003.advixe  suitability-model.cache  suitability.adviso  summary.advisum
openmp/C/Example_Advisor/e000/st003/config/: analysis_type.cfg  collection.cfg  context_values.cfg  runss.options
openmp/C/Example_Advisor/e000/st003/data.0/: 14959-14964.0-14964.0.th  14959-14964.0.trace
openmp/C/Example_Advisor/e000/st003/sqlite-db/: dicer.db
openmp/Fortran/: compile.sh  hello.f90
textbuffer/01.original/: example  main.c  ui.xml
textbuffer/02.cmake/: CMakeLists.txt
textbuffer/02.cmake/glade/: ui.glade
textbuffer/02.cmake/include/: MyWidgets.h
textbuffer/02.cmake/src/: CMakeLists.txt  func.c  main.c
textbuffer/03.split/: CMakeCache.txt  Makefile  cmake_install.cmake
textbuffer/03.split/glade/: Rscript_editor.glade
textbuffer/03.split/lib/: Makefile  cmake_install.cmake
textbuffer/03.split/src/: CMakeLists.txt  Makefile  cmake_install.cmake  rscript_editor_func.c  textbuffer
textbuffer/04.copy/: CMakeCache.txt  Makefile  clean.sh  cmake_install.cmake  make.sh
textbuffer/04.copy/glade/: Rscript_editor.glade
textbuffer/04.copy/include/: UserInterfaceFile.h  headers.h  rscript_editor_window_structures.h
textbuffer/04.copy/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
textbuffer/04.copy/src/: Makefile  cmake_install.cmake  main.c  rscript_editor.c  rscript_editor_func.c  textbuffer
vte/.bzr/branch/: last-revision
vte/.bzr/checkout/: dirstate
vte/.bzr/repository/: pack-names
vte/01.original/: vte
vte/01.original/src/: vte.c
vte/02.var_out/: Makefile  vte
vte/02.var_out/src/: CMakeLists.txt  Makefile  vte.c  vte_window_structures.h
vte/03.structures/: vte
vte/03.structures/src/: headers.h  vte.c  vte_window_structures.h
vte/04.glade/: CMakeLists.txt  Makefile
vte/04.glade/glade/: vte_window.glade
vte/04.glade/src/: CMakeLists.txt  defines.h  vte_window.c  vte_window_structures.h
vte/05.glade+cmd/glade/: vte_window.glade
vte/05.glade+cmd/src/: main.c  vte_cmd.c  vte_window.c  vte_window_structures.h
